se agrego el menu para navegar y no tener que escribir la url manualmente

--- a/src/pages/jugadores/todos.astro
+++ b/src/pages/jugadores/todos.astro
@@ -6,35 +6,25 @@ import Layout from '../layouts/Layout.astro';
 	<Layout title="Archivo del Reino">
 		<div class="centro">
 		<main class="menu-container">
-			<a href="/inbox" class="menu-card letters">
-				<div class="icon">✉️</div>
-				<h2>Correspondencia Real</h2>
-				<p>Cartas selladas y secretos de la nobleza</p>
-			</a>
 	
-			<a href="/recortes" class="menu-card newspapers">
-				<div class="icon">📰</div>
-				<h2>El Diario Antiguo</h2>
-				<p>Crónicas, noticias y sucesos del pueblo</p>
+			<a href="/ignacio" class="menu-card newspapers">
+				<div class="icon">🤹</div>
+				<h2>Ignacio</h2>
+				<p>El bardo</p>
 			</a>
 
-			<a href="/reglas" class="menu-card newspapers">
-				<div class="icon">📚</div>
-				<h2>Reglas</h2>
-				<p>Si tienes dudas pregunta o lee</p>
+			<a href="/juan" class="menu-card newspapers">
+				<div class="icon">🥋</div>
+				<h2>Juan</h2>
+				<p>El monje</p>
 			</a>
 
-		<a href="/ruteoClases" class="menu-card newspapers">
-			<div class="icon">🧙</div>
-			<h2>Poderes</h2>
-			<p>Demasiado poder</p>
+		<a href="/gaston" class="menu-card newspapers">
+			<div class="icon">✝️</div>
+			<h2>Gaston</h2>
+			<p>el clerigo</p>
 		</a>
 
-		<a href="/jugadores/todos" class="menu-card newspapers">
-			<div class="icon">👯</div>
-			<h2>Jugadores</h2>
-			<p>es la hoja de personaje para que quede un registro de lo que tienen en caso de duda</p>
-		</a>
 	</main>
 </div>
 	</Layout>
@@ -72,4 +62,3 @@ import Layout from '../layouts/Layout.astro';
 		align-content: center;
 	}
 </style>
-	
