solucionando problema de enrutamiento

--- a/src/pages/jugadores/todos.astro
+++ b/src/pages/jugadores/todos.astro
@@ -7,19 +7,19 @@ import Layout from '../../layouts/Layout.astro';
 		<div class="centro">
 		<main class="menu-container">
 	
-			<a href="/ignacio" class="menu-card newspapers">
+			<a href="/jugadores/ignacio" class="menu-card newspapers">
 				<div class="icon">🤹</div>
 				<h2>Ignacio</h2>
 				<p>El bardo</p>
 			</a>
 
-			<a href="/juan" class="menu-card newspapers">
+			<a href="/jugadores/juan" class="menu-card newspapers">
 				<div class="icon">🥋</div>
 				<h2>Juan</h2>
 				<p>El monje</p>
 			</a>
 
-		<a href="/gaston" class="menu-card newspapers">
+		<a href="/jugadores/gaston" class="menu-card newspapers">
 			<div class="icon">✝️</div>
 			<h2>Gaston</h2>
 			<p>el clerigo</p>
